devive owner auth

--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1694,4 +1694,52 @@
   <data name="Organization_SubLocation_Details" xml:space="preserve">
     <value>A Sub-Location is part of a location that has specific details.</value>
   </data>
+  <data name="DeviceOwnersDevices_Description" xml:space="preserve">
+    <value>The devices that this owner is associated with.</value>
+  </data>
+  <data name="DeviceOwnersDevices_Device" xml:space="preserve">
+    <value>Device</value>
+  </data>
+  <data name="DeviceOwnersDevices_DeviceId" xml:space="preserve">
+    <value>Device Id</value>
+  </data>
+  <data name="DeviceOwnersDevices_DeviceRepository" xml:space="preserve">
+    <value>Device Repository</value>
+  </data>
+  <data name="DeviceOwnersDevices_Organization" xml:space="preserve">
+    <value>Organization</value>
+  </data>
+  <data name="DeviceOwnersDevices_Title" xml:space="preserve">
+    <value>Devices</value>
+  </data>
+  <data name="DeviceOwners_Title" xml:space="preserve">
+    <value>Device Owners</value>
+  </data>
+  <data name="DeviceOwner_Description" xml:space="preserve">
+    <value>A Device Owner is a user in the system that ones one ore many devices across different organizations.</value>
+  </data>
+  <data name="DeviceOwner_Devices" xml:space="preserve">
+    <value>Devices</value>
+  </data>
+  <data name="DeviceOwner_EmailAddress" xml:space="preserve">
+    <value>Email Address</value>
+  </data>
+  <data name="DeviceOwner_FirstName" xml:space="preserve">
+    <value>First Name</value>
+  </data>
+  <data name="DeviceOwner_LastName" xml:space="preserve">
+    <value>Last Name</value>
+  </data>
+  <data name="DeviceOwner_Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="DeviceOwner_Password_Confirm" xml:space="preserve">
+    <value>Confirm Password</value>
+  </data>
+  <data name="DeviceOwner_PhoneNumber" xml:space="preserve">
+    <value>Phone Number</value>
+  </data>
+  <data name="DeviceOwner_Title" xml:space="preserve">
+    <value>Device Owner</value>
+  </data>
 </root>
