add time zone to org and location

--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1748,4 +1748,7 @@
   <data name="ExternalContact_Title" xml:space="preserve">
     <value>External Contact</value>
   </data>
+  <data name="Common_TimeZome" xml:space="preserve">
+    <value>Time Zone</value>
+  </data>
 </root>
