--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -1241,11 +1241,11 @@
   <data name="Calendar_Start" xml:space="preserve">
     <value>Start Time</value>
   </data>
-  <data name="Organization_LandingPage" xml:space="preserve">
-    <value>Landing Page</value>
+  <data name="Organization_HomePage" xml:space="preserve">
+    <value>HomePage</value>
   </data>
-  <data name="Organization_LandingPage_Help" xml:space="preserve">
-    <value>The default landing page for users logging in to NuvIoT is the standard portal that shows all the modules within NuvIoT for a user.  If you want to login to a different page, you can add the path here, the primary host name should still be https://www.nuviot.com though.</value>
+  <data name="Organization_HomePage_Help" xml:space="preserve">
+    <value>The home for users logging in to NuvIoT is the standard portal that shows all the modules within NuvIoT for a user.  If you want to login to a different page, you can add the path here, the primary host name should still be https://www.nuviot.com though.</value>
   </data>
   <data name="Organization_DefaultContributor" xml:space="preserve">
     <value>Default Contributor</value>
@@ -1990,5 +1990,11 @@
   </data>
   <data name="Organization_TestingIndustry_Help" xml:space="preserve">
     <value>The testing industry is used to test out email templates, mailers and bulk email mailings.  As part of the setup, you should upload a bulk email list that has a few sample contacts you can receive and review emails sent.</value>
+  </data>
+  <data name="Organization_DefaultLandingPage" xml:space="preserve">
+    <value>Default Landing Page</value>
+  </data>
+  <data name="Organization_DefaultLandingPage_Select" xml:space="preserve">
+    <value>-select default landing page-</value>
   </data>
 </root>
