time zone updates

--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -2024,4 +2024,7 @@
   <data name="Organization_DefaultTeamsWebHook_Help" xml:space="preserve">
     <value>Create a web hook to a channel within Microsoft Teams, as mentions are added to discussions, those discussions will be added to the channel and anyone tagged in the discussion will be notified.</value>
   </data>
+  <data name="Common_TimeZome_Picker" xml:space="preserve">
+    <value>-select time zone-</value>
+  </data>
 </root>
