--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -2111,4 +2111,16 @@
   <data name="Organization_EndUserHomePage_Help" xml:space="preserve">
     <value>This is the home page where end users, or people that are using your application should see when they login.   This is different then the Home Page where standard users, typcially the ones that are budiling and manage the application will see when they login.</value>
   </data>
+  <data name="Organization_EmailConfirmSubject" xml:space="preserve">
+    <value>Confirm Email Subject Line</value>
+  </data>
+  <data name="Organization_EmailConfirmSubject_Help" xml:space="preserve">
+    <value>This is the subject line of the message the user will get when they are asked to confirm their email address for the organization.  If one isn't provided it will display the message associated with NuvIoT.</value>
+  </data>
+  <data name="Organization_EmailConfirmBody" xml:space="preserve">
+    <value>Confirm Email Body</value>
+  </data>
+  <data name="Organization_EmailConfirmBody_Help" xml:space="preserve">
+    <value>This is the body of the email message that will be sent to ask the user to confirm their account.   If one is not provided, the standard message associated with NuvIoT will be used. This method should include some tags that will be replaced by links the user should click on, those links are [CALLBACK_URL] and [MOBILE_CALLBACK_URL].</value>
+  </data>
 </root>
