--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -2132,4 +2132,13 @@
   <data name="AppUser_Language_Select" xml:space="preserve">
     <value>-select language-</value>
   </data>
+  <data name="Organization_DefaultVectorDb" xml:space="preserve">
+    <value>Default Vector Db</value>
+  </data>
+  <data name="Organization_DefaultVectorDb_Select" xml:space="preserve">
+    <value>-select default vector db-</value>
+  </data>
+  <data name="Organization_DefaultVectorDb_Help" xml:space="preserve">
+    <value>This is the default vector database that is used for RAG (Retrieval-Augment Generation) for the large language model that support AI within NuvIoT.</value>
+  </data>
 </root>
